scss/partials/common/_banner.scss
.banner {
  position           : relative;
  height             : 495px;
  @media (min-width: map-get($breakpoints, 'm')) {
    height           : 700px;
  }
  background-size    : cover;
}

#banner-index {
  background         : $primary url("../assets/images/banner-index.jpg") no-repeat center;
}
#banner-contact {
  background         : $primary url("../assets/images/banner-contact.jpg") no-repeat 75% center;
}
#banner-services {
  background         : $primary url("../assets/images/apprenticeship-recruitment.jpg") no-repeat 40% center;
}

#banner-content {
  position           : absolute;
  z-index            : 100;
  top                : 10%;
  width              : 100%;

  * {
    @include set-content-width;
    display          : block;
    margin           : 0 15px;
    padding          : 8px 0;
    color            : $secondary;
  }
  h1, h2, h3 {
    text-transform   : uppercase;
    border           : 1px solid transparent;
  }
  h1 {
    font-size        : 2.25rem;
    margin-top       : 12px;
  }

  #banner-subheading {
    display          : block;
    border           : 1px solid transparent;
    h2 {
      margin         : 0 auto 0 0;
      padding        : 0 0 24px 0;
      width          : fit-content;
      border-bottom  : 2px solid $secondary;
      font-size      : 1.25rem;
      font-weight    : 300;
    }
  }

  h3 {
    font-size        : 1.125rem;
    font-weight      : 400;
  }

  #banner-summary {
    display          : block;

    p {
      margin-left    : 0;
      margin-right   : auto;
      padding        : 0;
      max-width      : 420px;
      font-size      : 1rem;
      font-style     : normal;
      font-weight    : 300;
      line-height    : 1.5;

      a {
        display          : inline;
        text-decoration  : none;
        &:hover, &:focus, &:active {
          text-decoration: underline;
        }
      }
    }

    address {
      margin: 0 auto 0 0;

      a {
        margin: 0 auto 0 2px;
      }
    }
  }

  #banner-button a {
    @include button-base-style($style: 'secondary') {
      margin-left    : 0;
      margin-right   : auto;
    }
  }
}

#banner-shapes-container {
  @include flexbox;
  height              : inherit;
  width               : inherit;
  overflow            : hidden;

  #banner-rectangle {
    @include flex($grow: 0, $shrink: 0, $basis: auto);
    display           : block;
    position          : relative;
    width             : calc(98vw - 495px * .35 - 5px);  // Full width minus triangle

    height            : 100%;
    background-color  : transparentize($secondary, .7);

    #banner-rectangle-inner {
      position        : absolute;
      top             : 0;
      bottom          : 0;
      width           : calc(98vw - 495px * .35 - 5px);
      height          : 100%;
      background-color: transparentize($primary, .2);
    }

    #banner-triangle {
      position       : absolute;
      // Position at LHS of banner less the triangle's width
      left           : calc(98vw - (495px * .35) - 5px);
      width          : 0;
      height         : 0;
      border-top     : calc(495px * .45 + 5px) solid transparent;
      border-left    : calc(495px * .35) solid transparentize($primary, .2);
      border-bottom  : calc(495px * .55 + 5px) solid transparent;
    }

    #banner-triangle-outline {
      position       : absolute;
      top            : -10px;
      // Position at LHS of banner less the triangle's width
      left           : calc(98vw - (495px * .35) - 5px);
      width          : 0;
      height         : 0;
      border-top     : calc(495px * .45 + 15px) solid transparent;
      border-left    : calc(495px * .35 + 5px) solid transparentize($secondary, .7);
      border-bottom  : calc(495px * .55 + 15px) solid transparent;
    }
  }

  .banner-image {
    @include flex($grow: 1, $shrink: 1, $basis: auto);
    width            : 40%;
    height           : 100%;
  }
}


// Animations - only apply in mobile view
@media (max-width: map-get($breakpoints, 's')) {
  #banner-shapes-container {
    @include slide-in-from-left($duration: 1000ms);
  }
  #banner-content {
    @include fade-element-in($duration: 800ms, $delay: 600ms);
  }
}


// All other media queries for viewport sizes
@media (min-width: map-get($breakpoints, 'm')) {
  #banner {
    height       : 700px;
    background   : $primary none no-repeat center;
  }
  #banner-content {
    top          : 90px;
    * {
      margin     : 25px auto 25px;
      padding    : 0;
    }
    h1 {
      font-size  : 3rem;
    }
    #banner-subheading h2 {
      font-size  : 1.625rem;
    }
    h3 {
      font-size  : 1.25rem;
    }

    #banner-summary p {
      font-size  : 1rem;
      width      : 400px;
    }
    #banner-button a {
      font-size  : 1.25rem;
      line-height: 1.25rem;
    }
  }

  #banner-shapes-container {
    #banner-rectangle {
      @include flex($grow: 1, $shrink: 1, $basis: auto);
      min-width       : 40%;
      width           : 40%;
      background-color: $primary;

      #banner-rectangle-inner {
        display       : none;
      }
      #banner-triangle {
        left          : 100%;
        border-top    : calc(700px * .45 + 5px) solid transparent;
        border-left   : calc(700px * .35) solid $primary;
        border-bottom : calc(700px * .55 + 5px) solid transparent;
      }
      #banner-triangle-outline {
        left          : 100%;
        border-top    : calc(700px * .45 + 15px) solid transparent;
        border-left   : calc(700px * .35 + 5px) solid $secondary;
        border-bottom : calc(700px * .55 + 15px) solid transparent;
      }
    }

    .banner-image {
      width           : 65%;
      background-size : cover;
    }
    #banner-image-index {
      background      : url("../assets/images/banner-index.jpg") no-repeat 40% center;
    }
    #banner-image-contact {
      background      : url("../assets/images/banner-contact.jpg") no-repeat 75% center;
    }
    #banner-image-services {
      background      : url("../assets/images/apprenticeship-recruitment.jpg") no-repeat 40% center;
    }
  }
}


@media (min-width: map-get($breakpoints, 'l')) {
  #banner-content {
    h1 {
      font-size: 3.25rem;
    }
    #banner-subheading h2 {
      font-size: 1.825rem;
    }
    h3 {
      font-size: 1.5rem;
    }

    #banner-summary p {
      font-size: 1.125rem;
    }
  }
}

